2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b153

 * New:
	checkSMTPParams()
	gallery_success($message)
	gallery_info($message)
	showInvalidReqMesg($text = '')

 * Fix: Code robustness printInfoBox

 * Fix: Typo in ecard parsing.

 * Fix: Enhanced getItemCaptureDate() and getDimensions()

 * Change: Beautified search.php

2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b152

 * Fix: Security enhancement. Autocomplete for upload pathes
        does now only work in defined upload pathes.

 * Fix: More of "Scope of HTTP Request Variables Not Enforced"

 * Fix: Watermarking with manual alignment and ImageMagick was broken.

 * New: albumBreadcrumb($parents), buildGroupsList()

 * Change: Enhanced drawSelect2()

2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b151

 * Fix: Increased check for valid albumnames.

 * Change: Code robustness for
	AlbumItem::setItemCaptureDate
	AlbumItem::getPhotoId

 * Fix: Adding ALT tag to AlbumItem::getPreviewTag if none was given.

 * Fix: Remove ALT tag in AlbumItem::getHighlightTag when
        there is no highlight.

 * New: AlbumItem::isImage

2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b150

 * Security Fix *

 Scope of HTTP Request Variables Not Enforced


 - Other changes -

 * Added updated list of allowed to include files.

 * Set $gallery->album = NULL
   when it was not possible to load a correct album.

 * Avoid eval() in setup/write.inc , use preg_replace /e
   Andrew thougt this would be better ;-)


2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b149

 * Change: Reworked copy photo.

 * Renamed:
	printAlbumOptionList -> albumOptionList
	printNestedVals      -> nestedAlbumOptionList

   They both does now return an array to use fro drawselect.

 * Enhanced: available_skins

 * Change: Added album highligt to
		rebuild thumbs
		rebuild capture dates
		reset votes

 * Minor code cleanups.
           
2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b148

 * Change: Some more function moving.
 