@@ -1,3 +1,15 @@
+2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b154
+
+ * Fix: Better checks for new album names.
+
+ * Fix: Prevent errormessge in sort album.
+ 
+ * Change: Reworked resize photo and rotate photo.
+
+ * Fix: Some minor bugfixes.
+
+ * Fix: Enhance view photo properties.
+
 2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b153
 
  * New:
